# mortal-polarity

./: .env-example  .gitignore  Dockerfile  Makefile  PRIVACY.md  Procfile  Procfile.release  README.md  TOS.md  atlas.hcl  docker-entrypoint.sh  graft_atlas_schema_revisions_onto_db.sql  pyproject.toml  requirements.txt
migrations/: 20240413093538_baseline.sql  20240413093611.sql  20240413142924.sql  20240416151339.sql  20240601170656.sql  atlas.sum
polarity/: alembic.ini  autoannounce.py  autopost.py  autopost_url.py  bungie_api.py  cfg.py  controller.py  custom_checks.py  debug_commands.py  delete_commands.py  embeds.py  export.py  help.py  ls.py  main.py  migration_commands.py  posts.py  release.py  reset_signaller.py  schemas.py  source.py  user_commands.py  utils.py  weekly_reset.py  xur.py
polarity/alembic/: env.py
polarity/alembic/versions/: 17b9c71c9e71_added_autopost_schemas.py  27898c22095b_create_or_get_weekly_reset_xur_and_.py  3236fcd1ba98_added_url_update_code_for_.py  5314339d0745_initial_revision.py  5a7d8d93629b_added_weekly_reset_tables.py  6198b20f6e44_added_last_msg_id_col_to_all_channel_.py  73bca89f337b_added_lost_sector_settings_table.py  93c9b7e168c5_rename_commands_text_to_commands_.py  994928bdc1a8_removed_the_autopostservers_table.py  cea90a867173_updated_xurpostsettings_col_names_and_.py  e9b61bf2db56_added_xurpostsettings.py
