[tool.poetry]
name = "polarity"
version = "0.1"
description = ""
authors = ["GS <gsfernandes81@gmail.com>"]
license = "GNU AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.11.0"
postgres = "*"
psycopg2-binary = "*"
psycopg2-pool = "*"
asyncpg = "*"
aiofiles = "*"
alembic = "*"
SQLAlchemy = "^1.4.41"
hikari = { extras = ["speedups"], version = "==2.0.0.dev119" }
# The below is a hikari/aiohttp speedups dependency
faust-cchardet = "^2.1.18"
hikari-lightbulb = "^2.2"
uvloop = "^0.17.0"
sector_accounting = {git = "https://github.com/gs729/sector_accounting.git", rev = "7b5d567"}

requests = "^2.28.1"
aiohttp = ">=3.8.3"
tweepy = ">=4.12.0"
hikari-toolbox = { git = "https://github.com/brazier-dev/hikari-toolbox.git" }
setuptools = "^65.0.0"
yarl = "^1.9.2"
honcho = "^1.1.0"
hikari-message = {git = "https://github.com/gs729/hikari-message.git"}
hikari-miru = "^3.1.1"
regex = "^2023.6.3"
aiocron = "^1.8"

[tool.poetry.dev-dependencies]
pyflakes = "*"
bandit = "*"
black = "*"
rope = "*"
# poetry-githooks = "^2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.githooks]
# NOTE: We should not need githooks any more with railway.app
# Note: Run "poetry run githooks setup" every time you change this section
# The without-hashes flag is necessary since private repos don't mix well
# with pip hashes
# pre-commit = "poetry export -f requirements.txt -o requirements.txt --without-hashes && git add requirements.txt"
