[tool.poetry]
name = "polarity"
version = "0.1"
description = ""
authors = ["GS <gsfernandes81@gmail.com>"]
license = "GNU AGPL-3.0-or-later"

[tool.poetry.dependencies]
aiocron = "^1.8"
aiofiles = "*"
aiohttp = ">=3.8.3"
asyncmy = "^0.2.7rc6"
cryptography = "^41.0.4"
faust-cchardet = "^2.1.18"
hikari = { extras = ["speedups"], version = "==2.0.0.dev120" }
hikari-lightbulb = "^2.3.1"
hikari-message = {git = "https://github.com/gs729/hikari-message.git"}
hikari-miru = "^3.1.1"
hikari-toolbox = { git = "https://github.com/brazier-dev/hikari-toolbox.git" }
honcho = "^1.1.0"
python = "~3.11.0"
regex = "^2023.6.3"
requests = "^2.28.1"
sector_accounting = {git = "https://github.com/gs729/sector_accounting.git", rev = "7b5d567"}
sqlalchemy = "^2.0.1"
tweepy = ">=4.12.0"
uvloop = "^0.17.0"
yarl = "^1.9.2"
dateparser = "^1.1.8"

[tool.poetry.dev-dependencies]
pyflakes = "*"
bandit = "*"
black = "*"
rope = "*"
# poetry-githooks = "^2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.githooks]
# NOTE: We should not need githooks any more with railway.app
# Note: Run "poetry run githooks setup" every time you change this section
# The without-hashes flag is necessary since private repos don't mix well
# with pip hashes
# pre-commit = "poetry export -f requirements.txt -o requirements.txt --without-hashes && git add requirements.txt"
